Preparation for Mandatory2 hand-in

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -171,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "25266e32",
+   "metadata": {},
+   "source": [
+    "len(train), len(val), len(test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "80069dd6",
@@ -285,33 +293,6 @@
     "    acc.update_state(y, yhat)\n",
     "\n",
     "print(pre.result(), re.result(), acc.result())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c834253a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def class_func(features, label):\n",
-    "  return label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fae081d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resample_ds = (\n",
-    "    data\n",
-    "    .unbatch()\n",
-    "    .rejection_resample(class_func, target_dist=[0.5,0.5])\n",
-    ")\n",
-    "balanced_ds = resample_ds.map(lambda extra_label, features_and_label: features_and_label)\n",
-    "dataset = balanced_ds.batch(32)"
    ]
   }
  ],
