Fix of incorrect data splitting

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -165,9 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = data.skip(val_size).take(train_size)\n",
+    "train = data.skip(val_size + test_size).take(train_size)\n",
     "val = data.take(val_size)\n",
-    "test = data.skip(train_size+val_size).take(test_size)"
+    "test = data.skip(val_size).take(test_size)"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist = model.fit(train, epochs=12, validation_data=val)"
+    "hist = model.fit(train, epochs=16, validation_data=val)"
    ]
   },
   {
@@ -294,6 +294,14 @@
     "\n",
     "print(pre.result(), re.result(), acc.result())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b2f6b5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
