Added class distribution plot

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -71,40 +71,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f90751",
+   "id": "bfeb7d43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count(counts, batch):\n",
-    "  features, labels = batch\n",
-    "  class_1 = labels == 1\n",
-    "  class_1 = tf.cast(class_1, tf.int32)\n",
+    "labels = []\n",
+    "for images, labels_batch in data:\n",
+    "  labels.extend(labels_batch.numpy())\n",
     "\n",
-    "  class_0 = labels == 0\n",
-    "  class_0 = tf.cast(class_0, tf.int32)\n",
+    "plt.hist(labels)\n",
+    "plt.xlabel('Class Name')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Distribution of image classes')\n",
     "\n",
-    "  counts['class_0'] += tf.reduce_sum(class_0)\n",
-    "  counts['class_1'] += tf.reduce_sum(class_1)\n",
-    "\n",
-    "  return counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8092dc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counts = data.take(len(data)).reduce(\n",
-    "    initial_state={'class_0': 0, 'class_1': 0},\n",
-    "    reduce_func = count)\n",
-    "\n",
-    "counts = np.array([counts['class_0'].numpy(),\n",
-    "                   counts['class_1'].numpy()]).astype(np.float32)\n",
-    "\n",
-    "fractions = counts/counts.sum()\n",
-    "print(fractions)"
+    "# Set the x-axis tick labels to the class names\n",
+    "plt.xticks(ticks=range(len(data.class_names)), labels=data.class_names)\n",
+    "plt.show()"
    ]
   },
   {
@@ -219,17 +201,6 @@
    "outputs": [],
    "source": [
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f74192a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logdir='logs'\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=logdir)"
    ]
   },
   {
