Added (again) manual testing

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -485,7 +485,51 @@
    "id": "9c5bea89",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Manual test, replace the img url with your image\n",
+    "import cv2\n",
+    " \n",
+    "img = cv2.imread('manual_test_images/test5.png')\n",
+    "plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f29665d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resize = tf.image.resize(img, (256,256))\n",
+    "plt.imshow(resize.numpy().astype(int))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8774bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat = model.predict(np.expand_dims(resize/255, 0))\n",
+    " \n",
+    "yhat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d72f7d6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if yhat > 0.5: \n",
+    "    print(f'Predicted class is dirty')\n",
+    "else:\n",
+    "    print(f'Predicted class is clean')"
+   ]
   }
  ],
  "metadata": {
